<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MateFinder</string>

    <string name="welcome">Witaj w MateFiner!</string>
    <string name="loading">Ładuję...</string>
    <string name="action_settings">Ustawienia</string>
    <string name="hint_email">Email</string>
    <string name="hint_new_password">nowe hasło</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_password_repeat">Powtórz hasło</string>
    <string name="hint_name">Imię i nazwisko</string>
    <string name="hint_login">Login</string>
    <string name="btn_login">ZALOGUJ</string>
    <string name="btn_register">ZAREJESTRUJ</string>
    <string name="btn_link_to_register">Nie jesteś członkiem? <u>Zarejestruj się.</u></string>
    <string name="btn_link_to_login">Jestem zarejestrowany! <u>Zaloguj mnie.</u></string>
    <string name="btn_link_to_login_remember_password">Pamiętam hasło! <u>Zaloguj mnie.</u></string>
    <string name="btn_link_to_change_password"><u>Zapomniałeś hasła?</u></string>
    <string name="btn_confirm_change_password">Zapisz hasło</string>
    <string name="action_logout">Wyloguj</string>
    <string name="name">Imię i nazwisko</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="podaj_nr">Podaj numer telefonu:</string>
    <string name="podaj_nr_wiad">Nie udało się pobrać numeru Twojego telefonu. \n Proszę wprowadzić ręcznie:</string>

    <!-- Actionbar -->
    <string name="action_change_view">Przełącz widok</string>
    <string name="action_add_user">Dodaj użytkownika</string>
    <string name="action_add_group">Dodaj grupę</string>
    <string name="action_send_notification">Powiadom</string>
    <string name="action_search">Szukaj</string>
    <string name="action_notification">Powiadomienie</string>
    <string name="action_share_location">Włącz / wyłącz lokalizację</string>
    <string name="action_edit_profile">Edytuj profil</string>

    <!-- boczne menu -->
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <!-- Edycja profilu -->
    <string name="editProfile_login">Login:</string>
    <string name="editProfile_email">E-mail:</string>
    <string name="editProfile_name">Imię:</string>
    <string name="editProfile_surname">Nazwisko:</string>
    <string name="editProfile_phone">Telefon:</string>
    <string name="editProfile_oldPass">Stare hasło:</string>
    <string name="editProfile_newPass">Nowe hasło:</string>
    <string name="editProfile_newPassRep">Powtórz hasło:</string>
    <string name="editProfile_btn_changePhoto">Ustaw zdjęcie</string>
    <string name="editProfile_btn_confirm">Zatwierdź zmiany</string>
    <string name="title_activity_edit_profile">Edycja profilu</string>
    <string name="title_activity_edit_password">Zmiana hasła</string>
    <string name="editProfile_changePass_link"><u>Zmień hasło</u></string>
    <string name="editProfile_changePass">Zmień hasło</string>
    <string name="editProfile_changePhoto">Zmień zdjęcie</string>

    <!-- Ustawienia -->
    <string name="title_activity_settings">Ustawienia</string>
    <string name="settings_notifications">Rodzaj powiadomień</string>
    <string name="settings_transfer">Ograniczenie transferu danych</string>
    <string name="settings_nav">Nawigowanie użytkownika</string>
    <string name="settings_radious">Promień wyszukiwania użytkowników</string>
    <string name="settings_motive">Motyw aplikacji</string>
    <string name="settings_save_btn">Zapisz zmiany</string>
    <string name="settings_notification_silent">Wycisz powiadomienia</string>
    <string name="settings_notification_loud">Włącz powiadomienia</string>
    <string name="settings_notification_sound">Dźwięk</string>
    <string name="settings_Notification_vibrate">Wibracja</string>
    <string-array name="settings_choose_nav">
        <item>Głosowe</item>
        <item>Wizualne</item>
    </string-array>
    <string-array name="settings_choose_motive">
        <item>Automatyczny</item>
        <item>Dzienny</item>
        <item>Nocny</item>
    </string-array>

    <!--Ustawienia zapis-->
    <string name="settings_save_file">pl.mf.zpi.matefinder.Settings</string>
    <string name="settings_save_key_transfer">transfer</string>
    <string name="settings_save_key_navigation">navigation</string>
    <string name="settings_save_key_radius">radius</string>
    <string name="settings_save_key_motive">motive</string>
    <string name="settings_save_key_visible_localization">visible_localization</string>
    <string name="settings_save_key_notification_silent">notification_silent</string>
    <string name="settings_save_key_notification_loud">notification_loud</string>
    <string name="settings_save_key_notification_sound">notification_sound</string>
    <string name="settings_save_key_notification_vibrate">notification_vibrate</string>

    <!-- Mapy -->
    <string name="title_activity_maps">Mapy</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_group_details">Dodaj grupę</string>

    <!--Edycja grupy-->
    <string name="put_group_name">Wpisz nazwę grupy</string>
    <string name="edit_group_nazwa_grupy">Nazwa grupy</string>
    <string name="edit_group_zapisz">Zapisz</string>

    <!--Dodawanie znajomego-->
    <string name="add_friend_login_znajomego">Login użytkownika</string>
    <string name="add_friend_dodaj">Dodaj użytkownika do znajomych</string>
    <string name="friend_login">Login znajomego</string>
    <string name="show_friends_button">Pokaż Znajomych</string>
    <string name="friends_list">Lista Znajomych</string>
    <string name="put_friend_login">Wpisz login znajomego</string>

    <string name="dialog_yes">Akceptuj</string>
    <string name="dialog_no">Odrzuć</string>
    <string name="dialog_back">Powrót</string>

    <!--Menu dla pojedynczego znajomego-->
    <string name="friend_menu_add_friend_to_group">Dodaj znajomego do grup</string>
    <string name="friend_menu_delete">Usuń znajomego</string>

    <!--Menu group-->
    <string name="group_menu_visible_off">Wyłącz widoczność grupy</string>
    <string name="group_menu_visible_on">Włącz widoczność grupy</string>
    <string name="group_menu_edit">Edytuj grupę</string>
    <string name="group_menu_add_friend">Dodaj znajomych</string>
    <string name="group_menu_delete">Usuń grupę</string>
    <string name="group_menu_delete_member">Usuń członka grupy</string>

    <!--Dodawanie do grupy-->
    <string name="add_friend_to_group">Zapisz</string>
    <string name="add_friend_to_groups">Wybierz grupy do których chcesz dodać znajomego</string>
    <string name="add_friends_to_group">Wybierz znajomych których chcesz dodać do grupy</string>

    <!--Usuwanie grupy-->
    <string name="delete_group_title">Usuń grupę</string>
    <string name="dlelete_group_confirm">Czy na pewno chcesz usunąć wybraną grupę?</string>
    <string name="delete_group_yes">Tak</string>
    <string name="delete_group_no">Nie</string>

    <!--Usuwanie członka-->
    <string name="delete_member_title">Usuń grupę</string>
    <string name="dlelete_member_confirm">Czy na pewno chcesz usunąć wybranego użytkownika z grupy?</string>
    <string name="delete_member_yes">Tak</string>
    <string name="delete_member_no">Nie</string>

    <string name="title_activity_add_friend_to_groups">Dodaj znajomego do grup</string>
    <string name="title_activity_add_friends_to_group">Dodaj znajomych do grupy</string>
    <string name="title_activity_update_group">Edytuj grupę</string>
    <string name="title_activity_add_friend">Dodaj znajomego</string>
    <string name="title_activity_show_friend_profile">Profil znajomego</string>
    <string name="showProfile_back">Cofnij</string>

    <!--Wiadomości-->
    <string name="message_content">Wiadomość</string>
    <string name="message_author">Nadawca</string>
    <string name="title_messages">Wiadomości</string>
    <string name="title_activity_messages">Wiadomości</string>
    <string name="message_delete">Usuń</string>
    <string name="message_delete_all">Usuń wszystkie</string>
    <string name="title_activity_remind_password">RemindPasswordActivity</string>


</resources>
