<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:alpha="1"
    tools:context="${relativePackage}.${activityClass}">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TableRow
        android:id="@+id/editProfile_row_oldPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editProfile_row_newPass"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/editProfile_oldPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfile_oldPass"
            android:textSize="@dimen/editProfile_fontSize" />

        <EditText
            android:id="@+id/editProfile_oldPass_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="@dimen/editProfile_fontSize" />
    </TableRow>

    <TableRow
        android:id="@+id/editProfile_row_newPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editProfile_row_newPassRep"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/editProfile_newPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfile_newPass"
            android:textSize="@dimen/editProfile_fontSize" />

        <EditText
            android:id="@+id/editProfile_newPass_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="@dimen/editProfile_fontSize" />
    </TableRow>

    <TableRow
        android:id="@+id/editProfile_row_newPassRep"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/editProfile_newPassRep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfile_newPassRep"
            android:textSize="@dimen/editProfile_fontSize" />

        <EditText
            android:id="@+id/editProfile_newPassRep_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="@dimen/editProfile_fontSize" />
    </TableRow>

    <Button
        android:id="@+id/editPassword_btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editProfile_btn_confirm" />

</RelativeLayout>