<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp"
    tools:context="${relativePackage}.${activityClass}">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha="1">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <ImageView
            android:id="@+id/editProfile_photo"
            android:layout_width="@dimen/editProfile_photoWidth"
            android:layout_height="@dimen/editProfile_photoHeight"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/app_bar"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/editProfile_btn_accept"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/editProfile_btn_confirm" />

        <TableRow
            android:id="@+id/editProfile_row_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editProfile_photo"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/editProfile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile_login"
                android:textSize="@dimen/editProfile_fontSize" />

            <TextView
                android:id="@+id/editProfile_login_content"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="29dp"
                android:textSize="@dimen/editProfile_fontSize" />
        </TableRow>

        <TableRow
            android:id="@+id/editProfile_row_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editProfile_row_surname"
            android:layout_alignRight="@+id/editProfile_row_surname"
            android:layout_below="@+id/editProfile_row_login"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/editProfile_email"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:text="@string/editProfile_email"
                android:textSize="@dimen/editProfile_fontSize" />

            <EditText
                android:id="@+id/editProfile_email_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/editProfile_fontSize" />
        </TableRow>

        <TableRow
            android:id="@+id/editProfile_row_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editProfile_row_surname"
            android:layout_alignRight="@+id/editProfile_row_surname"
            android:layout_below="@+id/editProfile_row_email"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/editProfile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile_phone"
                android:textSize="@dimen/editProfile_fontSize" />

            <EditText
                android:id="@+id/editProfile_phone_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="phone"
                android:textSize="@dimen/editProfile_fontSize" />
        </TableRow>

        <TableRow
            android:id="@+id/editProfile_row_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editProfile_photo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_toEndOf="@+id/editProfile_photo"
            android:layout_toRightOf="@+id/editProfile_photo">

            <TextView
                android:id="@+id/editProfile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile_name"
                android:textSize="@dimen/editProfile_fontSize" />

            <EditText
                android:id="@+id/editProfile_name_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="49dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/editProfile_fontSize" />
        </TableRow>

        <TableRow
            android:id="@+id/editProfile_row_surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editProfile_row_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_toEndOf="@+id/editProfile_photo"
            android:layout_toRightOf="@+id/editProfile_photo">

            <TextView
                android:id="@+id/editProfile_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile_surname"
                android:textSize="@dimen/editProfile_fontSize" />

            <EditText
                android:id="@+id/editProfile_surname_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/editProfile_fontSize" />
        </TableRow>

        <TextView
            android:id="@+id/editProfile_changePass_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editProfile_row_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:linksClickable="true"
            android:text="@string/editProfile_changePass_link" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/white"
        android:scrollbars="vertical" />

</android.support.v4.widget.DrawerLayout>